# CarStoreConsoleNew

./: CMakeLists.txt  main.cpp
Tests/: CMakeLists.txt  ElementValueTests.cpp  SerializableTest.cpp  TableTest.cpp  ViewTest.cpp
model/common/: Extensions.h  Includes.h
model/configuration/: Configuration.cpp  Configuration.h  DemoData.cpp  DemoData.h
model/object/: Object.cpp  Object.h
model/table/: BasicSerializable.cpp  BasicSerializable.h  BasicTable.cpp  BasicTable.h  Serializable.h  Table.h  View.cpp  View.h
model/ui/: UserInterface.cpp  UserInterface.h
